# studiofs-bench

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.aislop/: history.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  sync-repo-to-google-drive.yml
docs/code-reviews/: SFS-569-code-review.md
docs/contracts/: reference-validation.md
docs/user-manual/: release-notes.md
src/: config_workload_tui.rs  lib.rs  main.rs  main_tests.rs  runner_streaming.rs
src/config_workload_tui/: errors.rs  labels.rs  tests.rs
src/runner_streaming/: tests.rs
tests/: benchmark_runner.rs  config_model.rs  reference_validation_contract.rs  sequential_streaming_engine.rs  smoke.rs  tui_shell.rs
