[package]
name = "studiofs-bench"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[workspace]
resolver = "3"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"

[dependencies]

[lints]
workspace = true

[[bin]]
name = "studiofs-bench"
path = "src/main.rs"
